@@ -10,25 +10,12 @@ cd $dev
 check_virtual
 
 if [ "$virtual" = no ] && [ -f $oldid/detected_filesystem ]; then
-	case "$(cat $oldid/detected_filesystem)" in
-	    ntfs)
-		if ! get_ntfs_resize_range; then
-			db_input critical partman-partitioning/impossible_resize || true
-			db_go || true
-			exit 1
-		fi
-		;;
-	    ext2|ext3|ext4)
-		if ! get_ext2_resize_range; then
-			db_input critical partman-partitioning/impossible_resize || true
-			db_go || true
-			exit 1
-		fi
-		;;
-	    *)
-		get_resize_range
-		;;
-	esac
+	if ! get_real_resize_range "$oldid" \
+			"$(cat "$oldid/detected_filesystem")"; then
+		db_input critical partman-partitioning/impossible_resize || true
+		db_go || true
+		exit 1
+	fi
 else
 	get_resize_range
 fi
