@@ -1,0 +1,14 @@
+#! /bin/sh
+
+dev=$1
+num=$2
+id=$3
+size=$4
+type=$5
+fs=$6
+path=$7
+name=$8
+
+cd $dev
+
+rm -f "$id/real_resize_range_cache"
